[gd_scene load_steps=49 format=3 uid="uid://tsl01q3acwmc"]

[ext_resource type="Texture2D" uid="uid://dk3uogutcdk88" path="res://assets/Mushroom/Idle (32x32).png" id="1_ga28d"]
[ext_resource type="Script" path="res://Scripts/mushroom_enemy.gd" id="1_rq5co"]
[ext_resource type="Texture2D" uid="uid://s4ar6ipcmify" path="res://assets/Mushroom/Hit.png" id="2_3awl1"]
[ext_resource type="Texture2D" uid="uid://rbb7ymc5bv4g" path="res://assets/Mushroom/Run (32x32).png" id="4_3mkwa"]
[ext_resource type="AudioStream" uid="uid://8w8d8qiv13b8" path="res://assets/sounds/bump.mp3" id="4_6b27f"]
[ext_resource type="AudioStream" uid="uid://ddk83bkx0rghe" path="res://assets/sounds/pick_up.mp3" id="5_svrgx"]
[ext_resource type="Script" path="res://assets/MainCharacter/scripts/FSM.gd" id="7_o582p"]
[ext_resource type="Script" path="res://Scripts/mushroom_movement.gd" id="8_n65w4"]
[ext_resource type="Script" path="res://Scripts/mushroom_damage.gd" id="10_0whmx"]
[ext_resource type="Script" path="res://Scripts/mushroom_idle.gd" id="10_tlaji"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ms4sq"]
atlas = ExtResource("2_3awl1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxs1n"]
atlas = ExtResource("2_3awl1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyedd"]
atlas = ExtResource("2_3awl1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ardjg"]
atlas = ExtResource("2_3awl1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktiyr"]
atlas = ExtResource("2_3awl1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpuia"]
atlas = ExtResource("1_ga28d")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib6lg"]
atlas = ExtResource("1_ga28d")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxm5b"]
atlas = ExtResource("1_ga28d")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd5h8"]
atlas = ExtResource("1_ga28d")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_srr4f"]
atlas = ExtResource("1_ga28d")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw63q"]
atlas = ExtResource("1_ga28d")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyash"]
atlas = ExtResource("1_ga28d")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8ph5"]
atlas = ExtResource("1_ga28d")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtin2"]
atlas = ExtResource("1_ga28d")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqtp8"]
atlas = ExtResource("1_ga28d")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgasl"]
atlas = ExtResource("1_ga28d")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp31r"]
atlas = ExtResource("1_ga28d")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md2xg"]
atlas = ExtResource("1_ga28d")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp412"]
atlas = ExtResource("1_ga28d")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nvtd"]
atlas = ExtResource("4_3mkwa")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_53q7u"]
atlas = ExtResource("4_3mkwa")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72tdx"]
atlas = ExtResource("4_3mkwa")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_um1oe"]
atlas = ExtResource("4_3mkwa")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op05m"]
atlas = ExtResource("4_3mkwa")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnob0"]
atlas = ExtResource("4_3mkwa")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi216"]
atlas = ExtResource("4_3mkwa")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xahux"]
atlas = ExtResource("4_3mkwa")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_47cr7"]
atlas = ExtResource("4_3mkwa")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ee0"]
atlas = ExtResource("4_3mkwa")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bchn5"]
atlas = ExtResource("4_3mkwa")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xwr0"]
atlas = ExtResource("4_3mkwa")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4jhb"]
atlas = ExtResource("4_3mkwa")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yhu5"]
atlas = ExtResource("4_3mkwa")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8s1h"]
atlas = ExtResource("4_3mkwa")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_peu76"]
atlas = ExtResource("4_3mkwa")
region = Rect2(480, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lbj60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms4sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxs1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyedd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ardjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktiyr")
}],
"loop": true,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpuia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib6lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxm5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd5h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srr4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw63q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyash")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8ph5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtin2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqtp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgasl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp31r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md2xg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp412")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nvtd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53q7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72tdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um1oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op05m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnob0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi216")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xahux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47cr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ee0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bchn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xwr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4jhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yhu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8s1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_peu76")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gh048"]
size = Vector2(79, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yo0e5"]
size = Vector2(83, 56.0001)

[node name="MushroomEnemy" type="CharacterBody2D"]
position = Vector2(1, 0)
script = ExtResource("1_rq5co")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0.74992, -18.2501)
scale = Vector2(2.92187, 2.92187)
sprite_frames = SubResource("SpriteFrames_lbj60")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.99992, -8.01086e-05)
shape = SubResource("RectangleShape2D_gh048")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-1.50008, -8.01086e-05)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2.5, -2.99996)
shape = SubResource("RectangleShape2D_yo0e5")

[node name="RayCastFloorLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(-42, 0)
exclude_parent = false

[node name="RayCastFloorRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
position = Vector2(45, 0)
exclude_parent = false

[node name="Bump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6b27f")
volume_db = -9.0
pitch_scale = 1.3

[node name="PlayerDead" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_svrgx")
volume_db = -6.0
pitch_scale = 2.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_o582p")
initial_state = NodePath("Idle")

[node name="Movement" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("8_n65w4")
character = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="TakingDamage" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("10_0whmx")
character = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("10_tlaji")
character = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
